# super_orchestrator

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: ci.yml
.github/workflows/: ci.yml
dockerfiles/: .gitignore
dockerfiles/dockerfile_resources/: example.txt
examples/: auto_exec.rs  auto_exec_i.rs  basic_commands.rs  basic_containers.rs  clean.rs  commands.rs  docker_entrypoint_pattern.rs  file_options.rs  files.rs  paths.rs  postgres.rs  postgres_bollard.rs
src/: command.rs  command_runner.rs  docker.rs  docker_container.rs  docker_helpers.rs  docker_network.rs  error.rs  file_options.rs  lib.rs  log_file.rs  misc.rs  multicopy.rs  net_message.rs  parsing.rs  paths.rs  rw_stream.rs
src/bld/: super_docker_file.rs  super_manager.rs
src/bld/super_docker_file/: bollard_wrappers.rs  impls.rs  super_tar.rs
src/bld/super_manager/: impls.rs
super_orchestrator/: Cargo.toml
super_orchestrator/src/: api_docker.rs  bld.rs  cli_docker.rs  command.rs  command_runner.rs  docker_container.rs  docker_helpers.rs  file_options.rs  lib.rs  misc.rs  net_message.rs  parsing.rs  paths.rs
super_orchestrator/src/api_docker/: container_network.rs  container_runner.rs  helpers.rs  misc_structs.rs  running.rs  super_build_image_options.rs  super_docker_file.rs  super_network.rs  super_tar.rs  tarball.rs
super_orchestrator/src/bld/: super_docker_file.rs
super_orchestrator/src/bld/super_docker_file/: impls.rs  super_tar.rs
super_orchestrator/src/bld/super_manager/: impls.rs
super_orchestrator/src/cli_docker/: docker_container.rs  docker_helpers.rs  docker_network.rs
testcrate/: Cargo.toml
