[package]
name = "super_orchestrator"
version = "0.13.2"
edition = "2021"
authors = ["Aaron Kutch <aaronkutch@att.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AaronKutch/super_orchestrator"
documentation = "https://docs.rs/super_orchestrator"
keywords = ["container", "docker"]
description = "programmable container orchestration tools"
# TODO turn into workspace with testcrate and examples crate

[dependencies]
bstr = "1"
ctrlc = { version = "3", default-features = false }
dunce = "1.0"
nix = { version = "0.29", optional = true, default-features = false, features = ["signal"] }
owo-colors = { version = "4.0", default-features = false }
postcard = { version = "1", features = ["use-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha3 = "0.10"
stacked_errors = { version = "0.5", default-features = false }
#stacked_errors = { git = "https://github.com/AaronKutch/stacked_errors", rev = "74d52fd24ff7ec1faab4f2065f37ff356f089137", default-features = false }
#stacked_errors = { path = "../stacked_errors", default-features = false }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
clap = { version = "4", features = ["derive", "env"] }
tracing-subscriber = "0.3"

[features]
default = []
# needed for Unix signals on `Command`s
nix_support = ["nix"]
