[package]
name = "super_orchestrator"
version = "0.14.0"
edition = "2021"
authors = ["Aaron Kutch <aaronkutch@att.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AaronKutch/super_orchestrator"
documentation = "https://docs.rs/super_orchestrator"
keywords = ["container", "docker"]
description = "programmable container orchestration tools"
# TODO turn into workspace with testcrate and examples crate

[dependencies]
bstr = "1"
ctrlc = { version = "3", default-features = false }
dunce = "1.0"
nix = { version = "0.29", optional = true, default-features = false, features = ["signal"] }
owo-colors = { version = "4.0", default-features = false }
postcard = { version = "1", features = ["use-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha3 = "0.10"
stacked_errors = "0.6"
#stacked_errors = { git = "https://github.com/AaronKutch/stacked_errors", rev = "3f216ecfaad63f58b9ca9e44c9b5814f4637c21b" }
#stacked_errors = { path = "../stacked_errors" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
clap = { version = "4", features = ["derive", "env"] }
tracing-subscriber = "0.3"

[features]
default = []
# needed for Unix signals on `Command`s
nix_support = ["nix"]
