[package]
name = "testcrate"
version = "0.0.0"
edition = "2021"
publish = false

# Note: we put the example binaries as normal binaries and not examples
# because it changes the locations in target directories from what is usual

[dependencies]
super_orchestrator = { path = "../super_orchestrator", features = ["bollard"] }
clap = { version = "4", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
stacked_errors = "0.7"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
