[package]
name = "testcrate"
version = "0.0.0"
edition = "2021"
publish = false

# Note: we put the example binaries as normal binaries and not examples
# because it changes the locations in target directories from what is usual

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
stacked_errors = "0.7"
super_orchestrator = { path = "../super_orchestrator", features = ["bollard"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
